@@ -1,3 +1,14 @@
+Mon Jan 17 15:25:14 2000  Gary Wong  <gary@cs.arizona.edu>
+
+	* gnubg.c (CommandRollout): Label the standard error as such, rather
+	than standard deviation (not quite the same thing).
+
+	* rollout.c (VarRednRollout): Do not invert evaluation after calling
+	BearoffRollout (BearoffRollout already correctly adjusts for which
+	player is on roll).
+	(BasicRollout): Add parameter pec to correctly handle cases with
+	lookahead but no variance reduction.
+	
 Sun Jan 16 11:44:10 2000  Gary Wong  <gary@cs.arizona.edu>
 
 	* gnubg.c (GenerateKeywords, CommandHelp): Don't list commands with
